# caps-be

./: .env  .gitignore  API-Docs.md  README.md  advanced_query.py  app.py  docker-compose.yaml  gemini_integration.py  main.py  pyproject.toml  requirements.txt  run.py  utils.py
apps/alerts/: models.py  routes.py  services.py
apps/analytics/: routes.py
apps/auth/: models.py  routes.py  services.py
apps/incidents/: models.py  routes.py  services.py
apps/reports/: models.py  routes.py  services.py
apps/resources/: routes.py
apps/settings/: routes.py
apps/users/: models.py  routes.py  services.py
core/: config.py  database.py
core/rag/: analytics_service.py  incidents_vectorstore.py  llm.py  vectore_store.py
core/utils/: common.py  email.py  security.py
middlewares/: auth_middleware.py  rate_limiter.py
scripts/: import_csv.py
